@@ -1654,6 +1654,7 @@ extern size_t		cb_check_index_p (cb_tree x);
 extern void		cb_build_registers (void);
 extern void		cb_build_debug_item (void);
 extern void		cb_check_field_debug (cb_tree);
+extern void		cb_trim_program_id (cb_tree);
 extern char		*cb_encode_program_id (const char *);
 extern char		*cb_build_program_id (cb_tree, cb_tree, const cob_u32_t);
 extern cb_tree		cb_define_switch_name (cb_tree, cb_tree, const int);
