@@ -1097,6 +1097,28 @@ cb_build_registers (void)
 
 }
 
+/* check program-id literal and trim, if necessary */
+void
+cb_trim_program_id (cb_tree id_literal)
+{
+	char	*s;
+	int		len;
+
+	s = (char *)(CB_LITERAL (id_literal)->data);
+	if (strchr(s, ' ')) {
+		cb_warning_x (id_literal,
+			_("'%s' literal includes leading/trailing spaces which are omitted"), s);
+		len = strlen(s);
+		while (*s == ' ') {
+			memmove(s, s+1, len--);
+		}
+		while (s[len-1] == ' ' && len > 0) {
+			s[--len] = 0;
+		}
+		CB_LITERAL (id_literal)->size = len;
+	}
+}
+
 char *
 cb_encode_program_id (const char *name)
 {
